start with GESIS by default rather than binder.org because we really need these 8 GB RAM for HITEMP

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 _
   <!-- Main text  -->
   <div class="text">
-    <h1>🌱 <a href="https://mybinder.org/v2/gh/radis/radis-lab/main?urlpath=lab/tree/welcome.ipynb"  style="color:#ffffff">Start RADIS lab</a>&nbsp&nbsp&nbsp</h1>
+    <h1>🌱 <a href="https://notebooks.gesis.org/binder/v2/gh/radis/radis-lab/main?urlpath=lab/tree/welcome.ipynb"  style="color:#ffffff">Start RADIS lab</a>&nbsp&nbsp&nbsp</h1>
     <h2>Compute and compare spectra online</h2>
   </div>
 
