mention HITRAN/HITEMP in the description for social preview

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Start RADIS-lab</title>
-  <meta name="description" content="🌱 Online environment for advanced spectrum processing and comparison with experimental data">
+  <meta name="description" content="🌱 Online environment for advanced spectrum processing and comparison with experimental data. HITRAN/HITEMP databases preconfigured. Compute with RADIS, download your results !">
   <meta name="author" content="Erwan Pannier" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
